--- a/.github/workflows/update-datos.yml
+++ b/.github/workflows/update-datos.yml
@@ -2,8 +2,8 @@ name: Update datos.json
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Todos los días a las 00:00 UTC
-  workflow_dispatch:      # También puede lanzarse manualmente
+    - cron: '0 0 * * *'  # Ejecutar todos los días a las 00:00 UTC
+  workflow_dispatch:      # Permite ejecución manual opcional
 
 jobs:
   build:
