--- a/.github/workflows/update-datos.yml
+++ b/.github/workflows/update-datos.yml
@@ -28,6 +28,7 @@ jobs:
           python DatosListaPartidos.py
 
       - name: Hacer commit si hay cambios
+        shell: bash
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
