--- a/.github/workflows/update-datos.yml
+++ b/.github/workflows/update-datos.yml
@@ -36,5 +36,5 @@ jobs:
           if git diff --cached --quiet; then
             echo "No hay cambios en datos.json"
           else
-            git commit -m "📈 Update datos.json"
+            git commit -m "Update datos.json"
             git push
